--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       src="https://kit.fontawesome.com/b27a8a84a8.js"
       crossorigin="anonymous"
     ></script>
+    <script src="assets/particle-js/particles.min.js"></script>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap"
@@ -25,102 +26,93 @@
       background-position: 0 -60px;
     "
   >
-    <nav class="navbar navbar-dark fixed-top navbar-shrink py-3" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand" href="#">
-          <span>
-            <img
-              src="assets/img/logo.jpg"
-              alt="tantransh_logo"
-              class="logo rounded-circle me-2"
-            />
-          </span>
-          <span>Tantransh</span>
-        </a>
-        <a class="btn btn-primary" href="#scroll-to-events">Events</a>
-      </div>
-    </nav>
-    <header class="bg-dark pt-5">
-      <div class="container pt-4 pt-xl-5">
-        <div class="row pt-5">
-          <div class="col-md-8 col-xl-6 text-center text-md-start mx-auto">
-            <div class="text-center">
-              <p class="fw-bold text-success mb-2 fst-italic">
-                Organized by CSE department
-              </p>
-              <h1 class="fw-bold fst-italic main-heading">Tantransh'22</h1>
-              <p class="fw-bold fst-italic">- by Kriti Society</p>
+    <div class="header-container">
+      <div id="particles-js"></div>
+      <nav class="navbar navbar-dark fixed-top navbar-shrink py-3" id="mainNav">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <span>
+              <img
+                src="assets/img/logo.jpg"
+                alt="tantransh_logo"
+                class="logo rounded-circle me-2"
+              />
+            </span>
+            <span>Tantransh</span>
+          </a>
+          <a class="btn btn-primary" href="#scroll-to-events">Events</a>
+        </div>
+      </nav>
+      <header class="bg-dark pt-5">
+        <div class="container pt-4 pt-xl-5">
+          <div class="row pt-5">
+            <div class="col-md-8 col-xl-6 text-center text-md-start mx-auto">
+              <div class="text-center">
+                <p class="fw-bold text-success mb-2 fst-italic">
+                  Organized by CSE department
+                </p>
+                <h1 class="fw-bold fst-italic main-heading">Tantransh'22</h1>
+                <p class="fw-bold fst-italic">- by Kriti Society</p>
+              </div>
             </div>
-          </div>
-          <div class="col-12 col-lg-10 mx-auto">
-            <div
-              class="position-relative"
-              style="display: flex; flex-wrap: wrap; justify-content: flex-end"
-            >
+            <div class="col-12 col-lg-10 mx-auto">
               <div
+                class="position-relative"
                 style="
-                  position: relative;
-                  flex: 0 0 45%;
-                  transform: translate3d(-15%, 35%, 0);
+                  display: flex;
+                  flex-wrap: wrap;
+                  justify-content: flex-end;
                 "
               >
-                <img
-                  class="img-fluid"
-                  data-bss-parallax=""
-                  data-bss-parallax-speed="0.8"
-                  src="assets/img/main_tantransh_3.jpg"
-                />
-              </div>
-              <div
-                style="
-                  position: relative;
-                  flex: 0 0 45%;
-                  transform: translate3d(-5%, 20%, 0);
-                "
-              >
-                <img
-                  class="img-fluid"
-                  data-bss-parallax=""
-                  data-bss-parallax-speed="0.4"
-                  src="assets/img/main_tantransh_1.webp"
-                />
-              </div>
-              <div
-                style="
-                  position: relative;
-                  flex: 0 0 60%;
-                  transform: translate3d(0, 0%, 0);
-                "
-              >
-                <img
-                  class="img-fluid"
-                  data-bss-parallax=""
-                  data-bss-parallax-speed="0.25"
-                  src="assets/img/main_tantransh_2.jpg"
-                />
+                <div
+                  style="
+                    position: relative;
+                    flex: 0 0 45%;
+                    transform: translate3d(-15%, 35%, 0);
+                  "
+                >
+                  <img
+                    class="img-fluid"
+                    data-bss-parallax=""
+                    data-bss-parallax-speed="0.8"
+                    src="assets/img/main_tantransh_3.jpg"
+                  />
+                </div>
+                <div
+                  style="
+                    position: relative;
+                    flex: 0 0 45%;
+                    transform: translate3d(-5%, 20%, 0);
+                  "
+                >
+                  <img
+                    class="img-fluid"
+                    data-bss-parallax=""
+                    data-bss-parallax-speed="0.4"
+                    src="assets/img/main_tantransh_1.webp"
+                  />
+                </div>
+                <div
+                  style="
+                    position: relative;
+                    flex: 0 0 60%;
+                    transform: translate3d(0, 0%, 0);
+                  "
+                >
+                  <img
+                    class="img-fluid"
+                    data-bss-parallax=""
+                    data-bss-parallax-speed="0.25"
+                    src="assets/img/main_tantransh_2.jpg"
+                  />
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </header>
-    <section class="py-5" id="scroll-to-events">
-      <!-- <div class="container text-center py-5">
-        <p class="mb-4" style="font-size: 1.6rem">
-          Used by <span class="text-success"><strong>2400+</strong></span
-          >&nbsp;of the best companies in the world.
-        </p>
-        <a href="#"> <img class="m-3" src="assets/img/brands/google.png" /></a
-        ><a href="#">
-          <img class="m-3" src="assets/img/brands/microsoft.png" /></a
-        ><a href="#"> <img class="m-3" src="assets/img/brands/apple.png" /></a
-        ><a href="#">
-          <img class="m-3" src="assets/img/brands/facebook.png" /></a
-        ><a href="#">
-          <img class="m-3" src="assets/img/brands/twitter.png"
-        /></a>
-      </div> -->
-    </section>
+      </header>
+    </div>
+    <section class="py-5" id="scroll-to-events"></section>
     <section>
       <div class="container bg-dark py-5">
         <div class="row">
@@ -210,7 +202,9 @@
             </p>
           </div>
         </div>
-        <div class="d-flex justify-content-between coordinators">
+        <div
+          class="d-flex flex-column flex-md-row justify-content-between coordinators"
+        >
           <div class="card shadow-sm bg-dark">
             <a
               href="https://www.linkedin.com/in/sudhanshu-ranjan-23b2091a4/"
@@ -304,5 +298,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bold-and-dark.js"></script>
+    <script src="js/particles.js"></script>
   </body>
 </html>
