--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       src="https://kit.fontawesome.com/b27a8a84a8.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="assets/particle-js/particles.min.js"></script>
     <link
       rel="stylesheet"
@@ -43,7 +44,7 @@
           <a class="btn btn-primary" href="#scroll-to-events">Events</a>
         </div>
       </nav>
-      <header class="bg-dark pt-5">
+      <header class="bg-dark pt-5" data-aos="fade-up">
         <div class="container pt-4 pt-xl-5">
           <div class="row pt-5">
             <div class="col-md-8 col-xl-6 text-center text-md-start mx-auto">
@@ -115,7 +116,7 @@
     <section class="py-5" id="scroll-to-events"></section>
     <section>
       <div class="container bg-dark py-5">
-        <div class="row">
+        <div class="row" data-aos="fade-in">
           <div class="col-md-8 col-xl-6 text-center mx-auto">
             <p class="fw-bold text-success mb-2 fs-1">Our Events</p>
             <h3 class="fw-bold">What we have for you?</h3>
@@ -127,7 +128,11 @@
             style="max-width: 900px"
           >
             <div class="col mb-5">
-              <div class="card shadow-sm bg-primary-light h-100">
+              <div
+                class="card shadow-sm bg-primary-light h-100"
+                data-aos="flip-right"
+                data-aos-offset="300"
+              >
                 <div class="card-body px-4 py-5 px-md-5">
                   <h5 class="fw-bold card-title">Technical Events 💻</h5>
                   <p class="text-muted card-text mb-4">
@@ -142,7 +147,11 @@
               </div>
             </div>
             <div class="col mb-5">
-              <div class="card shadow-sm bg-info-light h-100">
+              <div
+                class="card shadow-sm bg-info-light h-100"
+                data-aos="flip-left"
+                data-aos-offset="300"
+              >
                 <div class="card-body px-4 py-5 px-md-5 position-relative">
                   <h5 class="fw-bold card-title">Sports Events 🏏</h5>
                   <p class="text-muted card-text mb-4">
@@ -157,7 +166,11 @@
               </div>
             </div>
             <div class="col mb-4">
-              <div class="card shadow-sm bg-success-light h-100">
+              <div
+                class="card shadow-sm bg-success-light h-100"
+                data-aos="flip-right"
+                data-aos-offset="300"
+              >
                 <div class="card-body px-4 py-5 px-md-5">
                   <h5 class="fw-bold card-title">Cultural Events 💃</h5>
                   <p class="text-muted card-text mb-4">
@@ -172,7 +185,11 @@
               </div>
             </div>
             <div class="col mb-4">
-              <div class="card shadow-sm bg-secondary-light h-100">
+              <div
+                class="card shadow-sm bg-secondary-light h-100"
+                data-aos="flip-left"
+                data-aos-offset="300"
+              >
                 <div class="card-body px-4 py-5 px-md-5">
                   <h5 class="fw-bold card-title">Other events 🎯</h5>
                   <p class="text-muted card-text mb-4">
@@ -192,7 +209,7 @@
     </section>
     <section class="py-5 mt-5">
       <div class="container py-5">
-        <div class="row mb-5">
+        <div class="row mb-5" data-aos="fade-up">
           <div class="col-md-8 col-xl-6 text-center mx-auto">
             <h2 class="fw-bold text-success fs-1">
               <strong>Our Coordinators</strong>
@@ -205,10 +222,12 @@
         <div
           class="d-flex flex-column flex-md-row justify-content-between coordinators"
         >
-          <div class="card shadow-sm bg-dark">
+          <div class="card shadow-sm">
             <a
+              class="bg-dark rounded"
               href="https://www.linkedin.com/in/sudhanshu-ranjan-23b2091a4/"
               target="_blank"
+              data-aos="fade-right"
             >
               <div class="card-body p-4 d-flex align-items-center">
                 <img
@@ -223,10 +242,13 @@
               </div>
             </a>
           </div>
-          <div class="card shadow-sm bg-dark">
+          <div class="card shadow-sm">
             <a
+              class="bg-dark rounded"
               href="https://www.linkedin.com/in/tanisha-vats-530225196/"
               target="_blank"
+              data-aos="fade-right"
+              data-aos-delay="300"
             >
               <div class="card-body p-4 d-flex align-items-center">
                 <img
@@ -241,8 +263,14 @@
               </div>
             </a>
           </div>
-          <div class="card shadow-sm bg-dark">
-            <a href="https://www.linkedin.com/in/whyybhav/" target="_blank">
+          <div class="card shadow-sm">
+            <a
+              data-aos="fade-right"
+              data-aos-delay="400"
+              href="https://www.linkedin.com/in/whyybhav/"
+              target="_blank"
+              class="bg-dark rounded"
+            >
               <div class="card-body p-4 d-flex align-items-center">
                 <img
                   class="rounded-circle flex-shrink-0 me-3 fit-cover"
@@ -295,6 +323,10 @@
         </div>
       </div>
     </footer>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bold-and-dark.js"></script>
