added technical and other events

--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                     technology and also will help us in our future endeavors in
                     the field of tech.
                   </p>
-                  <button class="btn btn-primary shadow" type="button">
+                  <a class="btn btn-primary shadow" href="technical.html">
                     View Details
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -197,9 +197,9 @@
                     totally fun driven. These events includes DJ Night, Blind
                     Date and much more...
                   </p>
-                  <button class="btn btn-primary shadow" type="button">
+                  <a class="btn btn-primary shadow" href="others.html">
                     View Details
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
