--- a/technical.html
+++ b/technical.html
@@ -27,7 +27,7 @@
   >
     <nav class="navbar navbar-dark fixed-top navbar-shrink py-3" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <span>
             <img
               src="assets/img/logo.jpg"
@@ -37,7 +37,7 @@
           </span>
           <span>Tantransh</span>
         </a>
-        <a class="btn btn-primary" href="#scroll-to-events">Events</a>
+        <a class="btn btn-primary" href="index.html#scroll-to-events">Events</a>
       </div>
     </nav>
     <section class="py-5 mt-5">
@@ -55,7 +55,7 @@
           <div class="col mb-5">
             <img
               class="images rounded img-fluid shadow"
-              src="assets/img/coding_still_2x.webp"
+              src="assets/img/technical/coding_still_2x.webp"
             />
           </div>
           <div
@@ -65,10 +65,10 @@
               <h5 class="fw-bold fs-3">Game of Codes&nbsp;</h5>
               <p class="text-muted mb-4">
                 "There are only 10 types of people in this world-Those who
-                understand binary and those who don't." If you think your "Happy
-                place" is the output screen with "100% test cases passed" then
-                the opportunity is right at your door. Tantransh'22 brings to
-                you a DSA coding carnival- Game of Codes.
+                understand binary and those who don't." <br />
+                If you think your "Happy place" is the output screen with "100%
+                test cases passed" then the opportunity is right at your door.
+                Tantransh'22 brings to you a DSA coding carnival- Game of Codes.
               </p>
               <button class="btn btn-primary shadow" type="button">
                 Learn more
@@ -83,7 +83,7 @@
           <div class="col order-md-last mb-5">
             <img
               class="images rounded img-fluid shadow"
-              src="assets/img/wbdev1.jpg"
+              src="assets/img/technical/wbdev1.jpg"
             />
           </div>
           <div
@@ -93,11 +93,12 @@
               <h5 class="fw-bold fs-3">Webify&nbsp;</h5>
               <p class="text-muted mb-4">
                 If you think math is hard, try web design. Have a strong command
-                on website development? So here is a chance to showcase your
-                skill. Tantransh presents Webify, a web page designing event.
-                Dazzle and delight us with your creative web page designs. A
-                webpage with an aesthetic feel, impressive fonts, and a nice
-                blend of colors is all that it takes!
+                on website development? <br />
+                So here is a chance to showcase your skill. Tantransh presents
+                Webify, a web page designing event. Dazzle and delight us with
+                your creative web page designs. A webpage with an aesthetic
+                feel, impressive fonts, and a nice blend of colors is all that
+                it takes!
               </p>
               <button class="btn btn-primary shadow" type="button">
                 Learn more
@@ -112,22 +113,86 @@
           <div class="col mb-5">
             <img
               class="images rounded img-fluid shadow"
-              src="assets/img/shark_tank.png"
+              src="assets/img/technical/shark_tank.png"
             />
           </div>
           <div
             class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
           >
             <div>
-              <h5 class="fw-bold">Lorem ipsum dolor sit&nbsp;</h5>
+              <h5 class="fw-bold fs-3">Shark Tank IET&nbsp;</h5>
               <p class="text-muted mb-4">
-                Erat netus est hendrerit, nullam et quis ad cras porttitor
-                iaculis. Bibendum vulputate cras aenean.
+                Do you ever wonder about a solution to the problem which you
+                have never got any opportunity to execute or present before
+                someone or want your entrepreneurship skill to be manifested.
+                "Shark Tank IET'' is giving you a chance to get all of this. It
+                is an idea pitching event in which you will be given an
+                opportunity to derive creative solutions to complex problems.
+                So, get ready with your innovative ideas.
               </p>
               <button class="btn btn-primary shadow" type="button">
                 Learn more
               </button>
             </div>
+          </div>
+        </div>
+      </div>
+      <div
+        class="row row-cols-1 row-cols-md-2 mx-auto"
+        style="max-width: 900px"
+      >
+        <div class="col order-md-last mb-5">
+          <img
+            class="images rounded img-fluid shadow"
+            src="assets/img/technical/terror_error.png"
+          />
+        </div>
+        <div
+          class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+        >
+          <div>
+            <h5 class="fw-bold fs-3">Terror in Error&nbsp;</h5>
+            <p class="text-muted mb-4">
+              "A programmer - You are like semicolon to my statements; She - I
+              code in python." <br />
+              Probably, the shortest love story ;) It's time for you to smash
+              the bugs and flaunt your coding skills as we bring yet another
+              enthralling event - Terror in Error - Debug it Up! A perfect combo
+              of accuracy and speed will be the best strategy to win.
+            </p>
+            <button class="btn btn-primary shadow" type="button">
+              Learn more
+            </button>
+          </div>
+        </div>
+      </div>
+      <div
+        class="row row-cols-1 row-cols-md-2 mx-auto"
+        style="max-width: 900px"
+      >
+        <div class="col mb-5">
+          <img
+            class="images rounded img-fluid shadow"
+            src="assets/img/technical/tech_buzz.jpeg"
+          />
+        </div>
+        <div
+          class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+        >
+          <div>
+            <h5 class="fw-bold fs-3">Tech-Buzz&nbsp;</h5>
+            <p class="text-muted mb-4">
+              Hi coders, Netflixers, and instagrammers, considering your
+              screen-time goes mostly into these platforms, let's get your
+              brains decrypted, twisted, and ready.
+              <br />
+              To test your love for technology, Tantransh presents Tech Buzz, a
+              technology quizzing competition. Learn some, win some, and get
+              yourself to the top
+            </p>
+            <button class="btn btn-primary shadow" type="button">
+              Learn more
+            </button>
           </div>
         </div>
       </div>
