--- a/technical.html
+++ b/technical.html
@@ -6,7 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Services - Brand</title>
+    <title>Techincal Events - Tantransh'22</title>
+    <link rel="shortcut icon" href="assets/img/logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <script
       src="https://kit.fontawesome.com/b27a8a84a8.js"
