added drop down buttons

--- a/others.html
+++ b/others.html
@@ -93,6 +93,11 @@
           >
             <div>
               <h5 class="fw-bold fs-3">Face Painting&nbsp;</h5>
+              <div class="d-flex mb-2">
+                <button class="btn btn-success btn-sm me-2">About</button>
+                <button class="btn btn-sm me-2">Prices</button>
+                <button class="btn btn-sm">Coordinators</button>
+              </div>
               <p class="text-muted mb-4">
                 Get ready with a new brush as we present yet another engaging
                 event- Face Painting. <br />
@@ -124,6 +129,11 @@
           >
             <div>
               <h5 class="fw-bold fs-3">Twist-a-Tale&nbsp;</h5>
+              <div class="d-flex mb-2">
+                <button class="btn btn-success btn-sm me-2">About</button>
+                <button class="btn btn-sm me-2">Prices</button>
+                <button class="btn btn-sm">Coordinators</button>
+              </div>
               <p class="text-muted mb-4">
                 “There is something delicious about writing the first words of a
                 story. You never quite know where they will take you.”<br />
@@ -154,6 +164,11 @@
         >
           <div>
             <h5 class="fw-bold fs-3">Blind Date&nbsp;</h5>
+            <div class="d-flex mb-2">
+              <button class="btn btn-success btn-sm me-2">About</button>
+              <button class="btn btn-sm me-2">Prices</button>
+              <button class="btn btn-sm">Coordinators</button>
+            </div>
             <p class="text-muted mb-4">
               Love is in the air as Tantransh is here with Ki and Ka- a blind
               date event. Butterflies in your stomach? Do you have someone you
@@ -186,6 +201,11 @@
         >
           <div>
             <h5 class="fw-bold fs-3">Written Confessions&nbsp;</h5>
+            <div class="d-flex mb-2">
+              <button class="btn btn-success btn-sm me-2">About</button>
+              <button class="btn btn-sm me-2">Prices</button>
+              <button class="btn btn-sm">Coordinators</button>
+            </div>
             <p class="text-muted mb-4">
               How long will you bottle up those feelings? Let yourself be drawn
               by the pull of love. <br />
