--- a/technical.html
+++ b/technical.html
@@ -63,6 +63,11 @@
           >
             <div>
               <h5 class="fw-bold fs-3">Game of Codes&nbsp;</h5>
+              <div class="d-flex mb-2">
+                <button class="btn btn-success btn-sm me-2">About</button>
+                <button class="btn btn-sm me-2">Prices</button>
+                <button class="btn btn-sm">Coordinators</button>
+              </div>
               <p class="text-muted mb-4">
                 "There are only 10 types of people in this world-Those who
                 understand binary and those who don't." <br />
@@ -91,6 +96,11 @@
           >
             <div>
               <h5 class="fw-bold fs-3">Webify&nbsp;</h5>
+              <div class="d-flex mb-2">
+                <button class="btn btn-success btn-sm me-2">About</button>
+                <button class="btn btn-sm me-2">Prices</button>
+                <button class="btn btn-sm">Coordinators</button>
+              </div>
               <p class="text-muted mb-4">
                 If you think math is hard, try web design. Have a strong command
                 on website development? <br />
@@ -121,6 +131,11 @@
           >
             <div>
               <h5 class="fw-bold fs-3">Shark Tank IET&nbsp;</h5>
+              <div class="d-flex mb-2">
+                <button class="btn btn-success btn-sm me-2">About</button>
+                <button class="btn btn-sm me-2">Prices</button>
+                <button class="btn btn-sm">Coordinators</button>
+              </div>
               <p class="text-muted mb-4">
                 Do you ever wonder about a solution to the problem which you
                 have never got any opportunity to execute or present before
@@ -152,6 +167,11 @@
         >
           <div>
             <h5 class="fw-bold fs-3">Terror in Error&nbsp;</h5>
+            <div class="d-flex mb-2">
+              <button class="btn btn-success btn-sm me-2">About</button>
+              <button class="btn btn-sm me-2">Prices</button>
+              <button class="btn btn-sm">Coordinators</button>
+            </div>
             <p class="text-muted mb-4">
               "A programmer - You are like semicolon to my statements; She - I
               code in python." <br />
@@ -181,6 +201,11 @@
         >
           <div>
             <h5 class="fw-bold fs-3">Tech-Buzz&nbsp;</h5>
+            <div class="d-flex mb-2">
+              <button class="btn btn-success btn-sm me-2">About</button>
+              <button class="btn btn-sm me-2">Prices</button>
+              <button class="btn btn-sm">Coordinators</button>
+            </div>
             <p class="text-muted mb-4">
               Hi coders, Netflixers, and instagrammers, considering your
               screen-time goes mostly into these platforms, let's get your
