Added Sports and Cultural Events

--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
                     endurance, and this will also help them in all round
                     development.
                   </p>
-                  <button class="btn btn-primary shadow" type="button">
+                  <a class="btn btn-primary shadow" href="sports.html">
                     View Details
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -173,9 +173,9 @@
                     their regular life, allow them to explore their interests
                     and also help them in personality development.
                   </p>
-                  <button class="btn btn-primary shadow" type="button">
+                  <a class="btn btn-primary shadow" href="cultural.html">
                     View Details
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
