added chess description

--- a/sports.html
+++ b/sports.html
@@ -72,7 +72,10 @@
                 "Shatranj Ka Khel Dekhne Se Log Khelna Shikh Jate Hai,Is Khel Ko
                 Khelne Se Log Harkar Jitna Sikh Jate Hai"<br />So Tantrash is
                 giving you an oppurtinity to grab a seat and check your
-                capabilities.
+                capabilities.Witness one of the most intriguing events out
+                there,where in a glimpse the table can be turnedupside down.In
+                the battle of wits,can you prevail? If yes,then showcase your
+                skills on the board of Chess.
               </p>
             </div>
           </div>
