--- a/cultural.html
+++ b/cultural.html
@@ -175,34 +175,34 @@
             </div>
           </div>
         </div>
-      </div>
-      <div
-        class="row row-cols-1 row-cols-md-2 mx-auto"
-        style="max-width: 900px"
-      >
-        <div class="col mb-5">
-          <img
-            class="talash rounded img-fluid shadow"
-            src="assets/img/cultural/musicalchair.jpg"
-          />
-        </div>
         <div
-          class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+          class="row row-cols-1 row-cols-md-2 mx-auto"
+          style="max-width: 900px"
         >
-          <div>
-            <h5 class="fw-bold">MUSICAL CHAIRS</h5>
-            <div class="mt-4 mb-4">
-              <button class="btn-sm btn btn-success me-2">About</button>
-              <button class="btn-sm btn me-2">Prizes</button>
-              <button class="btn-sm btn me-2">Coordinators</button>
+          <div class="col mb-5">
+            <img
+              class="talash rounded img-fluid shadow"
+              src="assets/img/cultural/musicalchair.jpg"
+            />
+          </div>
+          <div
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+          >
+            <div>
+              <h5 class="fw-bold">MUSICAL CHAIRS</h5>
+              <div class="mt-4 mb-4">
+                <button class="btn-sm btn btn-success me-2">About</button>
+                <button class="btn-sm btn me-2">Prizes</button>
+                <button class="btn-sm btn me-2">Coordinators</button>
+              </div>
+              <p class="text-muted mb-4">
+                Musical Chairs, also known as Trip to Jerusalem, is a game of
+                elimination involving players, chairs and music. It is a staple
+                of many parties worldwide. <br />
+                Trantransh brings you this fun game to enjoy and groove to the
+                music with chairs.
+              </p>
             </div>
-            <p class="text-muted mb-4">
-              Musical Chairs, also known as Trip to Jerusalem, is a game of
-              elimination involving players, chairs and music. It is a staple of
-              many parties worldwide. <br />
-              Trantransh brings you this fun game to enjoy and groove to the
-              music with chairs.
-            </p>
           </div>
         </div>
       </div>
