--- a/others.html
+++ b/others.html
@@ -143,68 +143,67 @@
             </div>
           </div>
         </div>
-      </div>
-      <div
-        class="row row-cols-1 row-cols-md-2 mx-auto"
-        style="max-width: 900px"
-      >
-        <div class="col order-md-last mb-5">
-          <img
-            class="images rounded img-fluid shadow"
-            src="assets/img/others/blind_date.jpeg"
-          />
-        </div>
         <div
-          class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+          class="row row-cols-1 row-cols-md-2 mx-auto"
+          style="max-width: 900px"
         >
-          <div>
-            <h5 class="fw-bold fs-3">Blind Date&nbsp;</h5>
-            <div class="d-flex mb-2">
-              <button class="btn btn-success btn-sm me-2">About</button>
-              <button class="btn btn-sm me-2">Prices</button>
-              <button class="btn btn-sm">Coordinators</button>
+          <div class="col order-md-last mb-5">
+            <img
+              class="images rounded img-fluid shadow"
+              src="assets/img/others/blind_date.jpeg"
+            />
+          </div>
+          <div
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+          >
+            <div>
+              <h5 class="fw-bold fs-3">Blind Date&nbsp;</h5>
+              <div class="d-flex mb-2">
+                <button class="btn btn-success btn-sm me-2">About</button>
+                <button class="btn btn-sm me-2">Prices</button>
+                <button class="btn btn-sm">Coordinators</button>
+              </div>
+              <p class="text-muted mb-4">
+                Love is in the air as Tantransh is here with Ki and Ka- a blind
+                date event. Butterflies in your stomach? Do you have someone you
+                can't get off your mind but are just too afraid to confess.
+                <br />
+                Set your fears aside as we come to your rescue. Get a chance to
+                spend time and build a healthy relationship with them! Are you
+                ready for a date with destiny? Who knows, you may just find the
+                perfect match!
+              </p>
             </div>
-            <p class="text-muted mb-4">
-              Love is in the air as Tantransh is here with Ki and Ka- a blind
-              date event. Butterflies in your stomach? Do you have someone you
-              can't get off your mind but are just too afraid to confess.
-              <br />
-              Set your fears aside as we come to your rescue. Get a chance to
-              spend time and build a healthy relationship with them! Are you
-              ready for a date with destiny? Who knows, you may just find the
-              perfect match!
-            </p>
           </div>
         </div>
-      </div>
-
-      <div
-        class="row row-cols-1 row-cols-md-2 mx-auto"
-        style="max-width: 900px"
-      >
-        <div class="col mb-5">
-          <img
-            class="images rounded img-fluid shadow"
-            src="assets/img/others/confession1.webp"
-          />
-        </div>
         <div
-          class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+          class="row row-cols-1 row-cols-md-2 mx-auto"
+          style="max-width: 900px"
         >
-          <div>
-            <h5 class="fw-bold fs-3">Written Confessions&nbsp;</h5>
-            <div class="d-flex mb-2">
-              <button class="btn btn-success btn-sm me-2">About</button>
-              <button class="btn btn-sm me-2">Prices</button>
-              <button class="btn btn-sm">Coordinators</button>
+          <div class="col mb-5">
+            <img
+              class="images rounded img-fluid shadow"
+              src="assets/img/others/confession1.webp"
+            />
+          </div>
+          <div
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+          >
+            <div>
+              <h5 class="fw-bold fs-3">Written Confessions&nbsp;</h5>
+              <div class="d-flex mb-2">
+                <button class="btn btn-success btn-sm me-2">About</button>
+                <button class="btn btn-sm me-2">Prices</button>
+                <button class="btn btn-sm">Coordinators</button>
+              </div>
+              <p class="text-muted mb-4">
+                How long will you bottle up those feelings? Let yourself be
+                drawn by the pull of love. <br />
+                Just say "I have a feeling for you." Or dedicate a song or poem
+                which can strike a chord with the one you are falling for. We'll
+                make sure your confession reaches them.
+              </p>
             </div>
-            <p class="text-muted mb-4">
-              How long will you bottle up those feelings? Let yourself be drawn
-              by the pull of love. <br />
-              Just say "I have a feeling for you." Or dedicate a song or poem
-              which can strike a chord with the one you are falling for. We'll
-              make sure your confession reaches them.
-            </p>
           </div>
         </div>
       </div>
