--- a/sports.html
+++ b/sports.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap"
     />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/events.css" />
   </head>
 
   <body
@@ -59,16 +60,16 @@
             />
           </div>
           <div
-            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5 chess"
           >
             <div>
               <h5 class="fw-bold">CHESS</h5>
-              <div class="mt-4 mb-4">
+              <div class="mt-4 mb-4 chess-controls">
                 <button class="btn-sm btn btn-success me-2">About</button>
                 <button class="btn-sm btn me-2">Prizes</button>
                 <button class="btn-sm btn me-2">Coordinators</button>
               </div>
-              <p class="text-muted mb-4">
+              <p class="text-muted mb-4" id="about">
                 "Shatranj Ka Khel Dekhne Se Log Khelna Shikh Jate Hai,Is Khel Ko
                 Khelne Se Log Harkar Jitna Sikh Jate Hai"<br />So Tantrash is
                 giving you an oppurtinity to grab a seat and check your
@@ -77,6 +78,16 @@
                 the battle of wits,can you prevail? If yes,then showcase your
                 skills on the board of Chess.
               </p>
+              <ol class="text-muted mb-4 hide" id="prizes">
+                <li>1st - 1100/-</li>
+                <li>2nd - 500/-</li>
+                <li>3rd - 200/-</li>
+              </ol>
+              <ol class="text-muted mb-4 hide" id="coordinators">
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+              </ol>
             </div>
           </div>
         </div>
@@ -240,5 +251,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bold-and-dark.js"></script>
+    <script src="js/events.js"></script>
   </body>
 </html>
